On hover document icons should have white background. Image previews should have a stroke. Fix wrong color for psd files

--- a/app/assets/stylesheets/widgets/documents_list.css.scss
+++ b/app/assets/stylesheets/widgets/documents_list.css.scss
@@ -20,6 +20,7 @@
 }
 
 .document-icon {
+	background-color:white;
 	border: 1px solid $grey_four;
 	color: #bbbbbb;
 	width: 30px;
@@ -39,6 +40,9 @@
 	}
 	&.xls, &.xlsx {
 		color: #7ca63a;
+	}
+	&.psd{
+		color: #3881a8;
 	}
 	&.pdf{
 		color: $adobe-pdf-file;
@@ -61,6 +65,7 @@
 }
 
 .document-image-preview {
+	border: 1px solid $grey_four;
 	float:left;
 	margin-right: 15px;
 	width: 30px;
